# m68k-emu

./: README.md
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/emulator/: CMakeLists.txt  emulator.cpp  emulator.h
src/lib/emulator/test/: CMakeLists.txt  main.cpp
src/lib/error/: CMakeLists.txt  error.cpp  error.h
src/lib/memory/: CMakeLists.txt  i_device.cpp  i_device.h  i_dispatcher.cpp  i_dispatcher.h  i_manager.h  types.h
src/lib/opcodes/: CMakeLists.txt  instructions.cpp  instructions.h  opcodes.h  targets.cpp  targets.h
src/lib/registers/: CMakeLists.txt  registers.cpp  registers.h
